--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/styles/extentx.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
+    <link href="//cdn.rawgit.com/noelboss/featherlight/1.5.0/release/featherlight.min.css" type="text/css" rel="stylesheet" />
   </head>
 
   <% var theme = ''; if (typeof req.session.theme !== 'undefined') theme = req.session.theme; %>
@@ -65,5 +66,6 @@
     <script src="/js/api/tests/controllers/TestDetailsController.js"></script>
     <script src="/js/api/tests/directives/testDetailsViewer.js"></script>
     <!--SCRIPTS END-->
+    <script src="//cdn.rawgit.com/noelboss/featherlight/1.5.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
